# termsysmon-rs

./: Cargo.toml
src/: main.rs
src/backend/: common.rs  mod.rs
src/backend/block_devices/: etc_mtab.rs  get_statvfs.rs  libc_mtab.rs  libc_statvfs.rs  mod.rs  nix_statvfs.rs  proc_mountinfo.rs  rustix_statvfs.rs  self_mtab.rs  statvfs.rs  sys_block.rs
src/backend/block_devices/sys_block/: common.rs  mod.rs  sys_block.rs  sys_block_stat.rs
src/backend/date/: calendar.rs
src/backend/hwmon/: hwmon.rs  mod.rs  sensors.rs
src/backend/network/: libc_ifaddrs.rs  libc_networks.rs  mod.rs  nix_network.rs  proc_net_dev.rs  sys_class_net.rs
src/backend/system/: libc_sysinfo.rs  mod.rs  nix_sysinfo.rs  proc_cpuinfo.rs  proc_meminfo.rs  proc_stat.rs  process.rs  sys_class_dmi.rs  system.rs  uname.rs  uptime.rs
src/frontend/: block.rs  common.rs  cpu.rs  dmi.rs  icons.rs  memory.rs  mod.rs  network.rs  uname.rs  uptime.rs
src/system_info/: block.rs  calendar.rs  common.rs  cpu.rs  dmi.rs  icons.rs  memory.rs  memory_tests.rs  mod.rs  network.rs
