[package]
name = "termsysmon"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossterm = "0.27.0"
libc = "0.2.149"
nix = { version = "0.27.1", features = ["net", "fs"] }
procfs = "0.15.1"
rustix = { version = "0.38.20", features = ["fs"] }
sysinfo = "0.29.10"
