[package]
name = "termsysmon"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
# purpose:
#  * network: `ifaddrs::getifaddrs`, `socket::SockaddrStorage`
#  * block devices: `statvfs`
# nix = { version = "0.27.1", features = ["net", "fs"] }
libc = "*"